--- a/README.rdoc
+++ b/README.rdoc
@@ -1,19 +1,23 @@
 = redcloth_on
 
-Description goes here.
+This is a gem that decorate ActiveModel Compliant objects using RedCloth
+
+== How to: 
+
+  class Person
+    redcloth_on [:name, :last_name]
+  end
 
 == Contributing to redcloth_on
- 
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it.
-* Fork the project.
-* Start a feature/bugfix branch.
-* Commit and push until you are happy with your contribution.
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+
+* Have a good improvement
+* Have test cases for it
+* Have fun
+
+*"Less Rails, More Objects. Less Objects more Messages"*
 
 == Copyright
+Copyright (c) 2012 Ivan Acosta-Rubio.
 
-Copyright (c) 2012 Ivan Acosta-Rubio. See LICENSE.txt for
-further details.
-
+http://www.bakedweb.net
+http://www.ivanacostarubio.com
